--- a/public/stylesheets/venta.css
+++ b/public/stylesheets/venta.css
@@ -59,6 +59,45 @@ button[type="submit"]:hover{
     color: white;
 }
 
+.card-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin: 70px 0px;
+}
+
+.card{
+    background: #f0f0f0;
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.5);
+    width: 25%;
+    padding: 5px 10px;
+    flex-basis: 25%;
+    flex-grow: 0;
+    margin: 2.3rem;
+    color: black;
+    text-decoration: none;
+    transition: transform 0.6s ease-in-out;
+}
+
+.card:hover{
+    transform: scale(1.1);
+}
+
+.card img{
+    width: 100%;
+}
+
+.card h2{
+    font-size: 1.2rem;
+}
+
+.card h3{
+    font-size: 2rem;
+    color: #750317;
+    text-align: right;
+    margin: 5px 0px;
+}
+
 
 @media screen and (max-width: 768px){
     body{
