--- a/views/venta.ejs
+++ b/views/venta.ejs
@@ -21,18 +21,20 @@
         </form>
     </div>
     
-    <% if(propiedades != undefined){ %>
-        <% for (let i = 0; i < propiedades.length; i++){ %>
-        <a class="card" href="/propiedad/<%=propiedades[i].id%>">
-            <h2><%= propiedades[i].nombre %></</h2>
-            <img src="/images/interior1.jpg" alt="">
-            <p>
-                <%= propiedades[i].descripcion %>
-            </p>
-            <h3>$<%= propiedades[i].precio %></h3>
-        </a>
+    <section class="card-container"> 
+        <% if(propiedades != undefined){ %>
+            <% for (let i = 0; i < propiedades.length; i++){ %>
+            <a class="card" href="/propiedad/<%=propiedades[i].id%>">
+                <h2><%= propiedades[i].nombre %></</h2>
+                <img src="/images/interior1.jpg" alt="">
+                <p>
+                    <%= propiedades[i].descripcion %>
+                </p>
+                <h3>$<%= propiedades[i].precio %></h3>
+            </a>
+            <% } %>
         <% } %>
-    <% } %>
+    </section>
 
     
     <%- include('../partials/footer') %>
