Armé función search

--- a/views/venta.ejs
+++ b/views/venta.ejs
@@ -15,9 +15,7 @@
 
     <div class="buscador">
         <form method="GET" action="/search">
-            <input type="text" placeholder="¿Qué está buscando?" name="query" >
-            <button href="" type="submit" >Buscar</button>
-        </div>
+            <input type="text" placeholder="¿Qué está buscando?" name="search" > <button type="submit" >Buscar</button>
         </form>
     </div>
     
