--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -45,6 +45,8 @@ header{
     background-color: #750317;
     padding: 4rem;
     box-shadow: 0 0 0 100vmax #750318af;
+    z-index: 9999;
+    pointer-events: auto;
 }
 
 .nav.visible{
