--- a/public/stylesheets/propiedad.css
+++ b/public/stylesheets/propiedad.css
@@ -22,7 +22,7 @@ body{
 }
 
 .container{
-    width: 70%;
+    width: 30%;
 }
 
 .container .img_container{
@@ -57,4 +57,61 @@ body{
 .active{
     opacity: 1 !important;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.5);
+}
+
+.container_informacion{
+    background-color: rgba(219, 217, 217, 0.137);
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+    width: 40%;
+    margin-left: 5rem;
+    padding: 2rem;
+    border-radius: 20px;
+}
+
+.icono{
+    height: 2rem;
+}
+
+.titulo{
+    display: flex;
+}
+
+.titulo h2{
+    font-size: 2.5rem;
+}
+
+.informacion{
+    display: flex;
+    justify-content: space-around;
+}
+
+.info{
+    display: flex;
+    align-items: center;
+}
+
+.info p{
+    font-size: 1.3rem;
+    margin-top: 1.5rem;
+}
+
+.container_informacion p{
+    font-size: 1.3rem;
+    margin-top: 1.5rem;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
+.precio{
+    display: flex;
+    color: #750317;
+    font-size: 2rem;
+    position: absolute;
+    bottom: 0;
+    right: 2rem;
+}
+
+.precio h3{
+
 }
