--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -11,11 +11,11 @@
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-lg"></i></button>
             <ul class="nav-list">
-                <li><a href="./inmo">HOME</a></li>
-                <li><a href="./alquiler">ALQUILER</a></li>
-                <li><a href="./venta">VENTA</a></li>
-                <li><a href="./nosotros">NOSOTROS</a></li>
-                <li><a href="./contacto">CONTACTO</a></li>
+                <li><a href="../inmo">HOME</a></li>
+                <li><a href="../alquiler">ALQUILER</a></li>
+                <li><a href="../venta">VENTA</a></li>
+                <li><a href="../nosotros">NOSOTROS</a></li>
+                <li><a href="../contacto">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
