Buscadores para alquiler y venta

--- a/views/alquiler.ejs
+++ b/views/alquiler.ejs
@@ -14,7 +14,7 @@
     <h1>ALQUILER</h1>
 
     <div class="buscador">
-        <form method="GET" action="/search">
+        <form method="GET" action="/searchAlquiler">
             <input type="text" placeholder="¿Qué está buscando?" name="query" >
             <button href="" type="submit" >Buscar</button>
         </div>
