--- a/views/venta.ejs
+++ b/views/venta.ejs
@@ -14,7 +14,7 @@
     <h1>VENTA</h1>
 
     <div class="buscador">
-        <form method="GET" action="/search">
+        <form method="GET" action="/searchVenta">
             <input type="text" placeholder="¿Qué está buscando?" name="search" > <button type="submit" >Buscar</button>
         </form>
     </div>
