--- a/views/venta.ejs
+++ b/views/venta.ejs
@@ -28,7 +28,8 @@
                 <p>
                     <%= propiedades[i].descripcion %>
                 </p>
-                <h3>$<%= propiedades[i].precio %></h3>
+                <h3>U$<%= propiedades[i].precio %></h3>                         
+                <h3><%= propiedades[i].direccion %></h3>
             </a>
             <% } %>
         <% } %>
