--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -38,6 +38,14 @@
                       </select>
                     </div>
                     <div>
+                      <label for="contrato">Contrato:</label>
+                      <select id="contrato" name="contrato" required>
+                        <option value="">Seleccione una opción</option>
+                        <option value="1">Alquiler</option>
+                        <option value="2">Venta</option>
+                      </select>
+                    </div>
+                    <div>
                       <label for="habitaciones">Habitaciones:</label>
                       <input type="number" id="habitaciones" name="habitaciones" min="0" required>
                     </div>
@@ -52,6 +60,10 @@
                     <div>
                       <label for="precio">Precio:</label>
                       <input type="number" id="precio" name="precio" min="0" required>
+                    </div>
+                    <div>
+                      <label for="direccion">Dirección:</label>
+                      <textarea id="direccion" name="direccion" maxlength="50"></textarea>
                     </div>
                     <div>
                       <label for="descripcion">Descripción:</label>
