--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -43,6 +43,7 @@ footer .redes a img{
         display: block;
         text-align: center;
         line-height: 4rem;
+        margin-top: 3rem;
     }
 
     footer .redes{
