--- a/public/stylesheets/venta.css
+++ b/public/stylesheets/venta.css
@@ -20,6 +20,7 @@ h1{
     text-align: center;
     color: #750317;
 }
+
 .buscador{
     display: flex;
     justify-content: center;
@@ -43,7 +44,6 @@ input[type="text"]{
     font-family: 'Josefin Sans', sans-serif;
 }
 
-
 button[type="submit"]{
     height: 2.65rem;
     box-shadow: 3px 2px 4px 2px rgba(0, 0, 0, 0.3);
@@ -63,7 +63,7 @@ button[type="submit"]:hover{
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin: 70px 0px;
+    /*margin: 70px 0px;*/
 }
 
 .card{
@@ -106,9 +106,20 @@ button[type="submit"]:hover{
 }
 
 
+@media screen and (max-width: 1024px){
+    .card{
+        flex-basis: 40%;
+    }
+}
+
+
 @media screen and (max-width: 768px){
     body{
         padding: 20px 30px;
+    }
+
+    .card{
+        flex-basis: 38%;
     }
 }
 
@@ -120,5 +131,9 @@ button[type="submit"]:hover{
 
     button[type="submit"]{
         height: 1.6rem;
+    }
+
+    .card{
+        flex-basis: 80%;
     }
 }
