--- a/public/stylesheets/contacto.css
+++ b/public/stylesheets/contacto.css
@@ -37,3 +37,26 @@ h1{
 #section4 img:hover{
     transform: scale(1.1);
 }
+
+@media screen and (max-width: 768px){
+    body{
+        padding: 20px 30px;
+    }
+
+    #section4 img{
+        height: 50px;
+    }
+}
+
+@media screen and (max-width: 425px){
+    .enlaces{
+        flex-direction: column;
+        align-items: center;
+        margin-top: 30px;
+        gap: 3rem;
+    }
+
+    #section4 img{
+        height: 70px;
+    }
+}
