--- a/views/alquiler.ejs
+++ b/views/alquiler.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/grupoluna.ico">
     <title>Alquiler</title>
     <link rel="stylesheet" href="/stylesheets/alquiler.css">
 </head>
@@ -32,7 +33,6 @@
                 <%= propiedades[i].descripcion %>
             </p>
             <h3>$<%= propiedades[i].precio %></h3>            
-            <h3><%= propiedades[i].direccion %></h3>
         </a>
         <% } %>
         <% } %>
