--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <link rel="shortcut icon" type="image/x-icon" href="/images/grupoluna.ico">
     <title>GRUPO LUNA</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
