--- a/views/letrado.ejs
+++ b/views/letrado.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/grupoluna.ico">
     <title>Gabriel Eduardo Luna Letrado</title>
     <link rel="stylesheet" href="/stylesheets/letrado.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
