--- a/views/venta.ejs
+++ b/views/venta.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/grupoluna.ico">
     <title>Venta</title>
     <link rel="stylesheet" href="/stylesheets/venta.css">
 </head>
@@ -29,7 +30,6 @@
                     <%= propiedades[i].descripcion %>
                 </p>
                 <h3>U$<%= propiedades[i].precio %></h3>                         
-                <h3><%= propiedades[i].direccion %></h3>
             </a>
             <% } %>
         <% } %>
