--- a/views/panel.ejs
+++ b/views/panel.ejs
@@ -12,6 +12,7 @@
 
   <header>
     <img src="/images/logoinmo.png" alt="">
+    <a href="./editarusuario">EDITAR ADMINISTRADOR</a>
     <p>Hola, administrador</p>
   </header>
 
