--- a/public/stylesheets/inmo.css
+++ b/public/stylesheets/inmo.css
@@ -17,7 +17,7 @@ body{
 }
 
 h1{
-    font-size: 6.3rem;
+    font-size: 4.3rem;
     font-weight: bold;
     background: linear-gradient(to bottom, #750317, #75031828);
     -webkit-background-clip: text;
@@ -33,6 +33,7 @@ h1 span{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 5rem;
 }
 
 .opciones a{
