--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,8 +25,18 @@
         <input type="password" id="password" name="password" required>
         <span id="password-error" class="error-message"></span>
       </div>
-      <button type="submit">Ingresar</button>
+      <button type="submit" action="/panel">Ingresar</button>
     </form>
+    
+    <% if(typeof errors != 'undefined'){ %>
+      <ul style="padding-left: 0%;">
+          <% for(let i = 0; i < errors.length; i++){ %>
+              <li style="list-style: none; padding-left: 0; font-size: 12px; color: red;">
+                  <%= errors[i].msg %>
+              </li>
+          <% } %>
+      </ul>
+  <% } %>
 
 
 
