Vista alquiler temporario. Modificaciones en Propiedad

--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -13,7 +13,7 @@
         <img id="gluna" src="/images/logogrupolonarojo.png" alt="">
         <div class="redes">
             <a href=""><img src="/images/logoinstagram.png" alt=""></a>
-            <a href=""><img src="/images/logowhatsapp.png" alt=""></a>
+            <a href="https://wa.me/5492215404664"><img src="/images/logowhatsapp.png" alt=""></a>
             <a href=""><img src="/images/logoface.png" alt=""></a>
         </div>
     </footer>
