--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -36,6 +36,10 @@
                         <option value="1">Casa</option>
                         <option value="4">Quinta</option>
                         <option value="2">Terreno</option>
+                        <!-- <option value="">Local</option>
+                        <option value="">Cochera</option>
+                        <option value="">Galpon</option>
+                        <option value="">Duplex</option> -->
                       </select>
                     </div>
                     <div>
@@ -44,6 +48,7 @@
                         <option value="">Seleccione una opción</option>
                         <option value="1">Alquiler</option>
                         <option value="2">Venta</option>
+                        <!-- <option value="3">Alq. Temp.</option> -->
                       </select>
                     </div>
                     <div>
@@ -68,7 +73,7 @@
                     </div>
                     <div>
                       <label for="descripcion">Descripción:</label>
-                      <textarea id="descripcion" name="descripcion" maxlength="200"></textarea>
+                      <textarea id="descripcion" name="descripcion" maxlength="1000"></textarea>
                     </div>
                     <div>
                       <button type="submit" name="accion" value="agregar">Agregar</button>
