--- a/views/inmo.ejs
+++ b/views/inmo.ejs
@@ -20,6 +20,7 @@
         </h1>
 
         <div class="opciones">
+                <a class="alquilertemporario" href="./alquilertemporario">ALQUILER TEMPORARIO</a>
             <a class="alquiler" href="./alquiler">ALQUILER</a>
             <a class="venta" href="./venta">VENTA</a>
         </div>
